# career-intelligence

./: .dockerignore  .env.example  .env.prod.example  .gitignore  AGENTS.md  PROJECT_OBJECTIVE.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
apps/api/: main.py
apps/web/: next.config.ts  openapi.json  package-lock.json  package.json
apps/worker/: celery_app.py  router.py
configs/: company_boards.yaml  role_category_taxonomy.yaml  search_profiles.yaml  source_policy.yaml  source_registry.yaml  workstream_taxonomy.yaml
docs/: architecture.md  runbook.md
infra/caddy/: Caddyfile
infra/compose/: docker-compose.dev.yml  docker-compose.infra.yml  docker-compose.prod.yml
infra/docker/: api.Dockerfile  backup.Dockerfile  backup.sh  openclaw-entrypoint.sh  openclaw.Dockerfile  web.Dockerfile  worker.Dockerfile
infra/nginx/: nginx.conf
ops/: appsmith_setup.md
protocols/: AGENT_IO_CONTRACT.md  DATA_POLICY.md  OUTPUT_CONTRACT.md  PROJECT_PROTOCOL.md  README.md  ROLE_CATEGORY_TAXONOMY.md  SEARCH_STRATEGY_PROTOCOL.md  WORKSTREAM_TAXONOMY.md  review_protocol.md  workflow_protocol.md
scripts/: backfill_jd_structured.py  check-openapi-contract.sh  dev_up.sh  export-openapi.py  generate-web-client.sh  migrate_company_boards.py  start_api.sh
tests/: README.md
tests/api/: test_auth.py  test_startup.py  test_workspace_isolation.py
tests/contract/: test_agent_contracts.py
tests/db/: test_merge_subject_areas_migration.py  test_rename_workstream_json_keys_migration.py
tests/domain/: test_source_registry.py  test_strategy_state.py
tests/integration/: test_smoke.py
tests/report/: conftest.py  test_fit_report_service.py  test_job_report_service.py
tests/worker/: test_intent_translator.py  (+8 more)
tools/: README.md
(+162 files in other folders)
